[gd_scene load_steps=6 format=3 uid="uid://cmwedhfxum2yp"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_5wtcj"]
[ext_resource type="PackedScene" uid="uid://dsudm3ish2ufc" path="res://scenes/QuestionScene.tscn" id="2_ep01l"]
[ext_resource type="PackedScene" uid="uid://dtdaofyu070uk" path="res://scenes/HttpScene.tscn" id="2_fumqx"]
[ext_resource type="PackedScene" uid="uid://6pqp18un1oph" path="res://scenes/ExerciseFeedbackScene.tscn" id="4_7cgdm"]
[ext_resource type="AudioStream" uid="uid://b7wc5q78ekgjo" path="res://assets/sounds/powerup.wav" id="5_epb6l"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_5wtcj")

[node name="HttpScene" parent="." instance=ExtResource("2_fumqx")]

[node name="QuestionScene" parent="." instance=ExtResource("2_ep01l")]
position = Vector2(0, 20)

[node name="ExerciseFeedbackScene" parent="." instance=ExtResource("4_7cgdm")]
visible = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_epb6l")
